@@ -1,3 +1,13 @@
+Tue Jun 22 12:08:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/ciao_tests.lst:
+          Disabled the cif tests until we have converted these to the locality
+          manager
+
+        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender_exec.cpp:
+        * connectors/ami4ccm/tests/InterMulti/Sender/InterMulti_Sender_exec.cpp:
+          Layout changes
+
 Tue Jun 22 11:49:10 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.h:
